--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4352,13 +4352,19 @@ hero-btn {
 }
 
 /* line 4, C:/Users/HP/Desktop/264.Business_HTML/HTML/assets/scss/_team.scss */
+.team-img {
+  text-align: center;
+}
+
+
+/* line 4, C:/Users/HP/Desktop/264.Business_HTML/HTML/assets/scss/_team.scss */
 .team-area .single-team .team-img {
   overflow: hidden;
 }
 
 /* line 6, C:/Users/HP/Desktop/264.Business_HTML/HTML/assets/scss/_team.scss */
 .team-area .single-team .team-img img {
-  width: 100%;
+  width: 50%;
   transform: scale(1);
   transition: all 0.6s ease-out 0s;
 }
@@ -4367,6 +4373,7 @@ hero-btn {
 .team-area .single-team .team-caption {
   padding: 20px 20px 20px 50px;
   background: #fff;
+  text-align: center;
 }
 
 /* line 15, C:/Users/HP/Desktop/264.Business_HTML/HTML/assets/scss/_team.scss */
