--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2969,8 +2969,12 @@ hero-btn {
 
 /* line 910, C:/Users/HP/Desktop/264.Business_HTML/HTML/assets/scss/_common.scss */
 .footer-padding {
+  /*
   padding-top: 143px;
   padding-bottom: 80px;
+  */
+  padding-top: 10px;
+  padding-bottom: 5px;  
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
